# Aeropeks

./: .gitignore  README.md  ROADMAP.md  index.html  metadata.json  package-lock.json  package.json
.github/workflows/: ci.yml  linux.yml  release.yml
aeropeks_design/design_handoff_aeropeks_theme/: Aeropeks Spec - Terminal Precision.html  README.md  aero-bar.jsx  aero-final.jsx  aero-popups-a.jsx  aero-popups-b.jsx  aero-settings.jsx  aero-spec.jsx  aero-tokens.jsx
docs/: architecture.md  linux-port.md
src/: App.tsx  CalendarPopover.tsx  CameraPopover.tsx  DemoPopup.tsx  ExpandedPlayer.tsx  Launcher.tsx  MowerPopover.tsx  PhonePopover.tsx  ProjectsPopover.tsx  Settings.tsx  Shortcuts.tsx  TaskbarBottom.tsx  Terminal.tsx  UsageLimitsPopover.test.ts  UsageLimitsPopover.tsx  VacuumPopover.tsx  WeatherPopover.tsx  assets.d.ts  atoms.tsx  contracts.ts  icons.tsx  index.css  main.tsx  modules.tsx  tokens.ts  window-routing.test.ts  window-routing.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  panels.json  preferences.json
src-tauri/src/: dreame.rs  ha.rs  http.rs  integrations.rs  launcher.rs  main.rs  media.rs  projects.rs  security.rs  settings.rs  shell.rs  shortcuts.rs  system_status.rs  terminal.rs
src-tauri/src/platform/: linux.rs  mod.rs  win.rs
src/hooks/: useMenuBarModel.ts  useSettingsModel.ts
