[package]
name = "aeropeks"
version = "0.1.0"
description = "A premium macOS-style top menu bar for Windows"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
urlencoding = "2"
portable-pty = "0.8"
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
    "Win32_System_Power",
    "Win32_System_SystemInformation",
    "Win32_System_Shutdown",
    "Win32_Security_Credentials",
    "Win32_Storage_FileSystem",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Bluetooth",
    "Win32_Devices_Enumeration_Pnp",
    "Media_Control",
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams"
] }
walkdir = "2"
open = "5"
tauri-plugin-global-shortcut = "2.0.0"
tokio = { version = "1", features = ["macros", "time"] }
obws = "0.12"
log = "0.4"
env_logger = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
